December 2014
	New function Runcode.typecheck_code for the benefit of offshoring
	New function Runcode.add_search_path to add a directory to
	he search path for .cmi/.cmo files -- report by Nicolas Ojeda Bar

April 24, 2014
	Fixed the problem noted by Jun Inoue in toplevel MetaOCaml.
	If the first Runcode.run is used after a type declaration,
	the defined type is considered locally scoped, which causes
	type checking errors or assettion faliures in typechecking.
	Preparing the environment for Runcode.run has a side-effect,
	of corrupting Ident timestamps. The timestamps are preserved now.

November 26, 2013
	Release N101
	Removed environment classifiers.
	Syntax .! is replaced with the ordinary prefix operation
	!.  (alias run) in the module Runcode. Runcode.run is an
	ordinary function, and is not part of the MetaOCaml kernel.
	New API for running code, encouraging the development of new ways
	to execute code values (see metalib/runcode.mli).
	BER N101 is binary compatible with OCaml 4.01. Building it
	no longer involves bootstrapping.
	Printing code is now part of OCaml (Pprintast, which was influenced by
        MetaOCaml).
	Scope-extrusion check works with delimited control.
	Added a test for the well-formedness of recursive let.
	Faster generation of code (especially for functions and nonbinding
	functions).
	More precise tracking of free variables and reporting of scope
	extrusion.

February 20, 2013
	Re-enabled ocamlbuild.byte target in the Makefile, so to
	to build ocamlbuild as part of the make all.
	A small fix to permit compiling ocamlopt. Although at present,
	ocamlopt can't compile code with brackets, it can compile
	the regular OCaml code. In addition, it supports let!.
	Thanks to Bob Zhang for suggestions.

January 30, 2013
	Rewritten trx.ml. Release N100.

January 12, 2013
	Importing the pretty-printing of code, greatly improved by Jacques
	Carette.

January 7-12, 2013
	Beginning the port to OCaml 4.00.1. The basic changes to OCaml