@@ -1,8 +1,10 @@
 December 2014
 	New function Runcode.typecheck_code for the benefit of offshoring
 	New function Runcode.add_search_path to add a directory to
-	he search path for .cmi/.cmo files -- report by Nicolas Ojeda Bar
-
+	the search path for .cmi/.cmo files -- report by Nicolas Ojeda Bar
+	Better handling of CSP. For simple cases, there are no longer
+	ny serialization problems.
+	
 April 24, 2014
 	Fixed the problem noted by Jun Inoue in toplevel MetaOCaml.
 	If the first Runcode.run is used after a type declaration,
